--- a/files/CSC_2516_Project_code.ipynb
+++ b/files/CSC_2516_Project_code.ipynb
@@ -11,8 +11,8 @@
    "outputs": [],
    "source": [
     "# Partial Bayesian Neural Networks\n",
-    "# Emad Zadegan and Nathan Friedman, 2019\n",
-    "# This is a fork of code by David Duvenaud for (fully) Bayesian Neural Networks\n",
+    "# Cyrus Maz and Nathan Friedman, 2019\n",
+
     "\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
