--- a/files/CSC_2516_Project_code.ipynb
+++ b/files/CSC_2516_Project_code.ipynb
@@ -11,7 +11,7 @@
    "outputs": [],
    "source": [
     "# Partial Bayesian Neural Networks\n",
-    "# Cyrus Maz 2019\n",
+    "# Cyrus Maz & Nathan Friedman 2019\n",
     "# Builds on code written by David Duvenaud\n",
     "\n",
     "\n",
