--- a/files/CSC_2516_Project_code.ipynb
+++ b/files/CSC_2516_Project_code.ipynb
@@ -12,7 +12,7 @@
    "source": [
     "# Partial Bayesian Neural Networks\n",
     "# Cyrus Maz & Nathan Friedman 2019\n",
-    "# Builds on code written by David Duvenaud\n",
+    "# Builds on code written by David Duvenaud (http://www.cs.toronto.edu/~duvenaud/)\n",
     "\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
